# ao_arch

./: README.md  core_api.yaml  pyproject.toml  setup.py
Architectures/: 0_basic_clam.py  0_basic_clam__with_pain.py  0_basic_clam_with_Qaux.py  1_basic_MNIST.py  2_netbox-device_discovery.py  3_basic_ARC.py
ao_arch/: __init__.py  ao_arch.py  functions.py
